--- a/css/main.css
+++ b/css/main.css
@@ -122,23 +122,46 @@ li.border-left-green{
 }
 
 .bg-skip-color{
-  background-color: #FE0000;
+  background-color: #FF6666;
 }
 
 .bg-transfer-color{
-  background-color: #FFC000;
+  background-color: #FFFF66;
 }
 
 .bg-optimize-color{
-  background-color: #01B0F1;
+  background-color: #3333FF;
 }
 
 .bg-perform-color{
-  background-color: #92D051;
+  background-color: #33CC00;
 }
 
 .border-right{
   border-width: 0px 1px 0px 0px;
   border-color: black;
   border-style: solid;
+}
+
+.big-bold-text{
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.btn-addTask-small{
+  height: 40px;
+  width: 40px;
+}
+.title-container{
+  height: 50px;
+  border: 1px solid #CCC;
+  text-align: center;
+  padding:8px;
+}
+
+.content-container{
+  height: 100%;
+  border: 1px solid #CCC;
+  text-align: center;
+  padding:8px;
 }
