--- a/css/main.css
+++ b/css/main.css
@@ -165,3 +165,11 @@ li.border-left-green{
   text-align: center;
   padding:8px;
 }
+
+.ng-dirty.ng-invalid{
+  outline: none;
+  background-image: linear-gradient(red,red),linear-gradient(#d2d2d2,#d2d2d2);
+  background-size: 100% 2px,100% 1px;
+  box-shadow: none;
+  transition-duration: .3s;
+}
