--- a/css/main.css
+++ b/css/main.css
@@ -122,19 +122,19 @@ li.border-left-green{
 }
 
 .bg-skip-color{
-  background-color: #FF6666;
+  background-color: #FF6666 !important;
 }
 
 .bg-transfer-color{
-  background-color: #FFFF66;
+  background-color: #FFFF66 !important;
 }
 
 .bg-optimize-color{
-  background-color: #3333FF;
+  background-color: #3333FF !important;
 }
 
 .bg-perform-color{
-  background-color: #33CC00;
+  background-color: #33CC00 !important;
 }
 
 .border-right{
